--- a/index.html
+++ b/index.html
@@ -1,20 +1,7 @@
 <!DOCTYPE HTML>
 <head>
 <title>kolumnin.com_index</title>
-<!-- Global site tag (gtag.js) - Google Ads: 719667278 --> 
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-719667278"></script> 
-<script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-719667278'); </script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NWK2PFX');</script>
-<!-- End Google Tag Manager -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWK2PFX"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 <meta http-equiv="refresh"
         content="8; url = https://kolumnin.github.io/">  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
@@ -37,7 +24,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <a class="w3-logo w3-green w3-btn w3-left" href="/index.html">home</a>
 <a class="w3-logo w3-blue w3-btn w3-left" href="/Author.html">author</a>
 <a class="w3-logo w3-red w3-btn w3-left" href="https://github.com/kolumnin/">github</a>
-<a class="w3-logo w3-orange w3-btn w3-left" href="https://kolumnin.hashnode.dev">blog</a>
+<!--a class="w3-logo w3-orange w3-btn w3-left" href="https://kolumnin.hashnode.dev">blog</a>
 <a class="w3-logo w3-pink w3-btn w3-left" href="https://sites.google.com/site">kolumnin</a>
 <a class="w3-logo w3-indigo w3-btn w3-left" href="https://www.google.com">google</a>
 <a class="w3-logo w3-teal w3-btn w3-left" href="https://www.microsoft.com">microsoft</a>
@@ -45,7 +32,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <a class="w3-logo w3-aqua w3-btn w3-left" href="https://linktr.ee/kolumnin">linktree</a>
 <a class="w3-logo w3-purple w3-btn w3-left" href="https://www.bsnl.co.in">telecom</a>
 <a class="w3-logo w3-green w3-btn w3-left" href="https://gitlab.com/users/sign_in">gitlab</a>
-<a class="w3-logo w3-blue w3-btn w3-left" href="https://github.com/marketplace/my-device-access-gateway">My Device</a>
+<a class="w3-logo w3-blue w3-btn w3-left" href="https://github.com/marketplace/my-device-access-gateway">My Device</a-->
 </section>
 </header>
 </section>
@@ -125,7 +112,7 @@ Tel: +919387177255/+918289857255</b><div class="w3-col l12 m8 s6 w3-left">
 
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 08:21 2022 Oct 18</a>@kolumnin</p>
+<p>Last update: 15:42 2022 Oct 22</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
