--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <a class="w3-logo w3-blue w3-btn w3-left" href="/Author.html">author</a>
 <a class="w3-logo w3-red w3-btn w3-left" href="https://github.com/kolumnin/">github</a>
 <a class="w3-logo w3-yellow w3-btn w3-left" href="https://kolumnin.awsapps.com/start/">aws</a>
-<a class="w3-logo w3-orange w3-btn w3-left" href="https://kolumnin.hashnode.dev"></a>
+<a class="w3-logo w3-orange w3-btn w3-left" href="https://kolumnin.hashnode.dev">blog</a>
 <a class="w3-logo w3-pink w3-btn w3-left" href="https://sites.google.com/site">google</a>
 <a class="w3-logo w3-teal w3-btn w3-left" href="https://www.microsoft.com">microsoft</a>
-<a class="w3-logo w3-yellow w3-btn w3-left" href="https://www.yahoo.com"></a>
-<a class="w3-logo w3-purple w3-btn w3-left" href="https://www.bsnl.co.in"></a>
+<a class="w3-logo w3-yellow w3-btn w3-left" href="https://www.yahoo.com">yahoo</a>
+<a class="w3-logo w3-purple w3-btn w3-left" href="https://www.bsnl.co.in">bsnl</a>
 <a class="w3-logo w3-green w3-btn w3-left" href="https://gitlab.com/users/sign_in">gitlab</a>
 <a class="w3-logo w3-blue w3-btn w3-left" href="https://github.com/marketplace/my-device-access-gateway"></a>
 </section>
@@ -38,12 +38,13 @@
 <div class="w3-container w3-pale-blue" Id="Author">
 <div style="text-align:left">
 </div></div>
-Click the link to install the myDeviceAccessGateway application:
-<a href="https://github.com/marketplace/my-device-access-gateway"><b>install</b></a>
+<!--Click the link to install the myDeviceAccessGateway application:
+<a href="https://github.com/marketplace/my-device-access-gateway"><b>install</b></a>-->
 <HR><BR>
 <!--div class="w3-col-3 l12 m8 s6 w3-left">
 </div-->
 </section>
+<a href="https://kolumnin.firebase.com">🔥Firebase projects</a>
 <section>
 <div class="w3-rest">
 <HR><BR>
@@ -168,11 +169,10 @@ You will also get a sponsor badge.
   }
   initPayPalButton();
   </script>
-2022-08-07-08:57@kolumnin
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 10:32 2022 Oct 31</a>@kolumnin</p>
+<p>Last update: 16:09 2022 November 10</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
