--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <section class="page-header logo">
 <header>
 <div class="w3-logo-image">
-<H1><a class="anchor" href="https://kolumnin.github.io/">
-<img src='/LOGO.jpg' class="w3-center w3-btn" width="" height=""></a>
+<H1><a class="anchor" href="https://github.com/kolumnin-com/kolumnin-com/main/index.html">
+<img src='' class="w3-center w3-btn" width="" height=""></a>
 </H1>
 </div>
 <section class="w3-nav">
