--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <title>kolumnin.com_index</title>
 
 <meta http-equiv="refresh"
-        content="8; url = https://kolumnin.github.io/Apps/install.html">  
+        content="8; url = https://kolumnin-com.github.io/kolumnin-com/">  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
-<meta name="website" content="https://kolumnin.github.io">
+<meta name="website" content="https://kolumnin-com.github.io/kolumnin-com/">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="/global.css" type="text/css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -48,7 +48,7 @@
 <section>
 <div class="w3-rest">
 <HR><BR>
-If you Sponsor my open source activities, you will be recognised as my sponsor anywhere I go. 
+😎If you Sponsor my open source activities, you will be recognised as my sponsor anywhere I go. 
 You will also get a sponsor badge.
 <iframe src="https://github.com/sponsors/kolumnin/button" title="Sponsor kolumnin" height="35" width="116" style="border: 0;"></iframe>
 <div id="smart-button-container">
@@ -172,7 +172,7 @@ You will also get a sponsor badge.
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 16:09 2022 November 10</a>@kolumnin</p>
+<p>Last update: 16:,21 2022 November 10</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
