--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!--div class="w3-col-3 l12 m8 s6 w3-left">
 </div-->
 </section>
-<a href="https://kolumnin.firebase.com">🔥Firebase projects</a>
+<a href="https://kolumnin-com.github.io/kolumnin-com/">🔥Firebase projects</a>
 <section>
 <div class="w3-rest">
 <HR><BR>
