--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!--div class="w3-col-3 l12 m8 s6 w3-left">
 </div-->
 </section>
-<a href="https://kolumnin-com.github.io/kolumnin-com/">🔥Firebase projects</a>
+<a href="https://github.com/kolumnin-com/kolumnin-com/blob/main/firebase/kolumnin%20firebase%20app/index.html">🔥Firebase projects</a>
 <section>
 <div class="w3-rest">
 <HR><BR>
@@ -172,7 +172,7 @@ You will also get a sponsor badge.
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 16:,21 2022 November 10</a>@kolumnin</p>
+<p>Last update: 16:35 2022 November 10</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
