--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <a class="w3-logo w3-yellow w3-btn w3-left" href="https://www.yahoo.com">yahoo</a>
 <a class="w3-logo w3-purple w3-btn w3-left" href="https://www.bsnl.co.in">bsnl</a>
 <a class="w3-logo w3-green w3-btn w3-left" href="https://gitlab.com/users/sign_in">gitlab</a>
+<a class="w3-logo w3-blue w3-btn w3-left" href="https://dev-3hsyt1a4.auth0.com/login?state=hKFo2SAyVmNXWFZKd1lTV3hxUHl5ZlJIY2NrNWF2Z3BVSlZVaqFupWxvZ2luo3RpZNkgaGlyUGJ5TkxheFdvLWNmYmpPSEdvWWZyYzRjR2s1ODijY2lk2SBtRTQ0SG1wZDlrWmlPUDYxUzRCUHFVZEZMZkw0RXY3eQ&client=mE44Hmpd9kZiOP61S4BPqUdFLfL4Ev7y&protocol=oauth2&redirect_uri=https%3A%2F%2Fmanage.auth0.com%2Ftester%2Fcallback%3Fconnection%3Dgithub&response_type=code&scope=openid%20profile&link_account_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJnaXRodWJ8NTM5NjEyNzAiLCJlbWFpbCI6Im1rMjYzNEBnbWFpbC5jb20iLCJiYXNlIjoiaHR0cHM6Ly9kZXYtM2hzeXQxYTQuYXV0aDAuY29tL2FwaS92MiIsImlhdCI6MTY2ODQwMTk4MiwiZXhwIjoxNjY4NDAyMjgyLCJhdWQiOiJFZmhoYmQxMDZRMWJieExsMWdLQUtaVDEyUDM5Y3l0cyIsImlzcyI6Imh0dHBzOi8vZGV2LTNoc3l0MWE0LmF1dGgwLmNvbS8ifQ.UX5DS974M73cC9ybgFfbUFEBY9FTcSqmNFuqARO2e88&prevent_sign_up=true&connection=Username-Password-Authentication">auth0</a>
+<a class="w3-logo w3-green w3-btn w3-left" href="https://gitlab.com/users/sign_in">gitlab</a>
 <a class="w3-logo w3-blue w3-btn w3-left" href="https://github.com/marketplace/my-device-access-gateway"></a>
 </section>
 </header>
@@ -172,7 +174,7 @@ You will also get a sponsor badge.
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 16:35 2022 November 10</a>@kolumnin</p>
+<p>Last update: 10:45 2022 November 14</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
