--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
 <div class="w3-container w3-pale-blue" Id="Author">
 <div style="text-align:left">
 </div></div>
-<Click the link to install the myDeviceAccessGateway application:
-<a href="https://github.com/marketplace/my-device-access-gateway"><b>install</b></a>
 <HR><BR>
 <!--div class="w3-col-3 l12 m8 s6 w3-left">
 </div-->
@@ -49,8 +47,8 @@
 <section>
 <div class="w3-rest">
 <HR><BR>
-😎If you Sponsor my open source activities, you will be recognised as my sponsor anywhere I go. 
-You will also get a sponsor badge.
+    🙏😎If you Sponsor my open source activities, you will be recognised as my sponsor anywhere I go. 
+You will also get a sponsor badge🙏😄.
 <iframe src="https://github.com/sponsors/kolumnin/button" title="Sponsor kolumnin" height="35" width="116" style="border: 0;"></iframe>
 <div id="smart-button-container">
     <div style="text-align: center"><label for="description">Sponsor </label><input type="text" name="descriptionInput" id="description" maxlength="127" value=""></div>
@@ -173,7 +171,7 @@ You will also get a sponsor badge.
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 10:55 2022 November 14</a>@kolumnin</p>
+<p>Last update: 11:00 2022 November 14</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
