--- a/firebase/kolumnin firebase app/index.html
+++ b/firebase/kolumnin firebase app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <head>
 <title>kolumnin-com-firebase_index</title>
-<meta http-equiv="refresh"
-        content="8; url = https://kolumnin-com.github.io/kolumnin-com/">  
+<!--meta http-equiv="refresh"
+        content="8; url = https://kolumnin-com.github.io/kolumnin-com/"-->  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
@@ -41,12 +41,11 @@
 <HR><BR>
 </section>
 <a href="https://github.com/kolumnin-com/kolumnin-com/blob/main/firebase/kolumnin%20firebase%20app/index.html">🔥Firebase projects</a>
-<!--a href="https://>🔥Firebase projects</a-->
 <section>
 <div class="w3-rest">
 <HR><BR>
-    🙏😎If you Sponsor my open source activities, you will be recognised as my sponsor anywhere I go. 
-You will also get a sponsor badge🙏😄.
+    😎🙏If you Sponsor my open source activities, you will be recognised as my sponsor anywhere I go. 
+You will also get a sponsor badge🙏😎
 <iframe src="https://github.com/sponsors/kolumnin/button" title="Sponsor kolumnin" height="35" width="116" style="border: 0;"></iframe>
 <div id="smart-button-container">
     <div style="text-align: center"><label for="description">Sponsor </label><input type="text" name="descriptionInput" id="description" maxlength="127" value=""></div>
@@ -169,7 +168,7 @@ You will also get a sponsor badge🙏😄.
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 13:58 2022 November 14</a>@kolumnin</p>
+<p>Last update: 14:23 2022 November 14</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
