--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
 <div class="w3-logo-image">
 <H1><a class="anchor" href="https://github.com/kolumnin-com/kolumnin-com/main/index.html">
-<img src='' class="w3-center w3-btn" width="" height=""></a>
+<img src='https://github.com/organizations/kolumnin-com/settings/profile' class="w3-center w3-btn" width="" height=""></a>
 </H1>
 </div>
 <section class="w3-nav">
@@ -171,7 +171,7 @@ You will also get a sponsor badge🙏😄.
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 11:00 2022 November 14</a>@kolumnin</p>
+<p>Last update: 15:31 2022 November 16</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
