--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="/global.css" type="text/css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6716492374225592"
+     crossorigin="anonymous"></script>
 </head>
 <body bgcolor="white" class="w3-container w3-color-black w3-white w3-left">
 <section class="page-header logo">
@@ -171,7 +173,7 @@ You will also get a sponsor badge🙏😄.
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 15:35 2022 November 16</a>@kolumnin</p>
+<p>Last update: 19:58 2022 November 24</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
