--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6716492374225592"
      crossorigin="anonymous"></script>
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 <body bgcolor="white" class="w3-container w3-color-black w3-white w3-left">
 <section class="page-header logo">
