--- a/index.html
+++ b/index.html
@@ -173,10 +173,16 @@ You will also get a sponsor badge🙏😄.
   }
   initPayPalButton();
   </script>
-<hr>
+<HR>
+<!--Google adsense-->
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-6716492374225592">
+</amp-auto-ads>
+<!--Google adsense-->
+<HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 19:58 2022 November 24</a>@kolumnin</p>
+<p>Last update: 20:26 2022 November 24</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
