--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
-<meta name="website" content="https://kolumnin-com.github.io/kolumnin-com/">
+<meta name="Organisation" content="https://kolumnin-com.github.io/kolumnin-com/">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="/global.css" type="text/css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -20,11 +20,12 @@
 <body bgcolor="white" class="w3-container w3-color-black w3-white w3-left">
 <section class="page-header logo">
 <header>
+<H1>
 <div class="w3-logo-image">
-<H1><a class="anchor" href="https://github.com/kolumnin-com/main/index.html">
+<a class="anchor" href="https://github.com/kolumnin-com/index.html">
 <img src='https://avatars.githubusercontent.com/u/83348627?s=200&v=4' class="w3-center w3-btn" width="" height=""></a>
-</H1>
 </div>
+</H1>
 <section class="w3-nav">
 <a class="w3-logo w3-green w3-btn w3-left" href="/index.html">home</a>
 </section>
@@ -33,9 +34,7 @@
 <div class="w3-container w3-pale-blue" Id="Author">
 <div style="text-align:left">
 </div></div>
-<HR><BR>
-<!--div class="w3-col-3 l12 m8 s6 w3-left">
-</div-->
+<BR>
 </section>
 <a href="https://github.com/kolumnin-com/kolumnin-com/blob/main/firebase/kolumnin%20firebase%20app/index.html">🔥Firebase projects</a>
 <section>
@@ -171,7 +170,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 12:42 2022 December 07</a>@kolumnin</p>
+<p>Last update: 12:49 2022 December 07</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
