--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
 </div>
 </H1>
 <section class="w3-nav">
-<a class="w3-logo w3-green w3-btn w3-left" href="/index.html">home</a>
+<a class="w3-logo w3-green w3-btn w3-left" href="https://github.com/kolumnin-com/index.html">home</a>
 </section>
 </header>
 </section>
-<div class="w3-container w3-pale-blue" Id="Author">
-<div style="text-align:left">
-</div></div>
-<BR>
+
 </section>
 <a href="https://github.com/kolumnin-com/kolumnin-com/blob/main/firebase/kolumnin%20firebase%20app/index.html">🔥Firebase projects</a>
+<!--div class="w3-container w3-pale-blue" Id="">
+<div style="text-align:left">
+</div></div-->
+<BR>
 <section>
 <div class="w3-rest">
 <HR><BR>
@@ -170,7 +171,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 12:49 2022 December 07</a>@kolumnin</p>
+<p>Last update: 06:49 2022 December 13</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
