--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>kolumnin-com_index</title>
 
 <meta http-equiv="refresh"
-        content="8; url = https://kolumnin-com.github.io/kolumnin-com/">  
+        content="3; url = https://github.com/kolumnin-com/index.html">  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
@@ -18,14 +18,12 @@
 </script>
 </head>
 <body bgcolor="white" class="w3-container w3-color-black w3-white w3-left">
-<section class="page-header logo">
+<section class="page-header w3-logo-image">
 <header>
-<H1>
-<div class="w3-logo-image">
+<div>
 <a class="anchor" href="https://github.com/kolumnin-com/index.html">
 <img src='https://avatars.githubusercontent.com/u/83348627?s=200&v=4' class="w3-center w3-btn" width="" height=""></a>
 </div>
-</H1>
 <section class="w3-nav">
 <a class="w3-logo w3-green w3-btn w3-left" href="https://github.com/kolumnin-com/index.html">home</a>
 </section>
@@ -171,7 +169,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 06:49 2022 December 13</a>@kolumnin</p>
+<p>Last update: 07:02 2022 December 13</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
