--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <title>kolumnin-com_index</title>
 
-<meta http-equiv="refresh"
-        content="3; url = https://github.com/kolumnin-com/index.html">  
+<!--meta http-equiv="refresh"
+        content="3; url = https://github.com/kolumnin-com/index.html"-->  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
@@ -29,16 +29,15 @@
 </section>
 </header>
 </section>
-
 </section>
+<section>
 <a href="https://github.com/kolumnin-com/kolumnin-com/blob/main/firebase/kolumnin%20firebase%20app/index.html">🔥Firebase projects</a>
 <!--div class="w3-container w3-pale-blue" Id="">
 <div style="text-align:left">
 </div></div-->
-<BR>
+</section>
 <section>
 <div class="w3-rest">
-<HR><BR>
     🙏😎If you Sponsor my open source activities, you will be recognised as my sponsor anywhere I go. 
 You will also get a sponsor badge🙏😄.
 <iframe src="https://github.com/sponsors/kolumnin/button" title="Sponsor kolumnin" height="35" width="116" style="border: 0;"></iframe>
@@ -169,7 +168,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 07:02 2022 December 13</a>@kolumnin</p>
+<p>Last update: 07:09 2022 December 13</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
