--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 </section>
 </section>
 <section>
-<a href="https://github.com/kolumnin-com/kolumnin-com/blob/main/firebase/kolumnin%20firebase%20app/index.html">🔥Firebase projects</a>
-<!--div class="w3-container w3-pale-blue" Id="">
+<div class="w3-container w3-pale-blue">
 <div style="text-align:left">
-</div></div-->
+<HR>
+</div></div>
 </section>
 <section>
 <div class="w3-rest">
@@ -168,7 +168,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 07:09 2022 December 13</a>@kolumnin</p>
+<p>Last update: 07:13 2022 December 13</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
