--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <title>kolumnin-com_index</title>
 
-<!--meta http-equiv="refresh"
-        content="3; url = https://github.com/kolumnin-com/index.html"-->  
+<meta http-equiv="refresh"
+        content="3; url = https://github.com/kolumnin-com/index.html">  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
