--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <head>
-<title>kolumnin-com_index</title>
+<title>kolumnin-com_index.html</title>
 
 <meta http-equiv="refresh"
         content="3; url = https://github.com/kolumnin-com/index.html">  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
-<meta name="Organisation" content="https://kolumnin-com.github.io/kolumnin-com/">
+<meta name="Organisation" content="https://kolumnin-com.github.io/kolumnin.com/">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="/global.css" type="text/css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -167,8 +167,8 @@ You will also get a sponsor badge🙏😄.
 <!--Google adsense-->
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
-<div>©2000-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
-<p>Last update: 09:25 2022 December 25</a>@kolumnin</p>
+<div>©2022- kolumnin.com All rights reserved.</div>
+<p>Last update: 10:02 2022 December 26</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
