--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <section class="page-header w3-logo-image">
 <header>
 <div>
-<a class="anchor" href="https://github.com/kolumnin-com/index.html">
+<a class="anchor" href="https://kolumnin-com.github.io/kolumnin-com/">
 <img src='https://avatars.githubusercontent.com/u/83348627?s=200&v=4' class="w3-center w3-btn" width="" height=""></a>
 </div>
 <section class="w3-nav">
@@ -168,7 +168,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2022- kolumnin.com All rights reserved.</div>
-<p>Last update: 10:02 2022 December 26</a>@kolumnin</p>
+<p>Last update: 12:15 2022 December 30</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
