--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE HTML>
 <head>
+        <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MMBKJP4');</script>
+<!-- End Google Tag Manager -->
 <title>kolumnin-com_index.html</title>
 
 <meta http-equiv="refresh"
