--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <title>kolumnin-com_index.html</title>
 
 <meta http-equiv="refresh"
-        content="3; url = https://github.com/kolumnin-com/index.html">  
+        content="3; url = https://kolumnin-com.github.io/kolumnin-com/">  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
@@ -179,7 +179,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2022- kolumnin.com All rights reserved.</div>
-<p>Last update: 14:08 2022 January 02</a>@kolumnin</p>
+<p>Last update: 09:36 2023 January 05</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
