--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <img src='https://avatars.githubusercontent.com/u/83348627?s=200&v=4' class="w3-center w3-btn" width="" height=""></a>
 </div>
 <section class="w3-nav">
-<a class="w3-logo w3-green w3-btn w3-left" href="https://github.com/kolumnin-com/index.html">home</a>
+<a class="w3-logo w3-green w3-btn w3-left" href="https://kolumnin-com.github.io/kolumnin-com/">home</a>
 </section>
 </header>
-</section>
+<section>
+This is the organisation index page
 </section>
 <section>
 <div class="w3-container w3-pale-blue">
@@ -179,7 +180,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2022- kolumnin.com All rights reserved.</div>
-<p>Last update: 09:36 2023 January 05</a>@kolumnin</p>
+<p>Last update: 09:39 2023 January 05</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
