--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MMBKJP4');</script>
 <!-- End Google Tag Manager -->
 <title>kolumnin-com_index.html</title>
-
 <meta http-equiv="refresh"
         content="3; url = https://kolumnin-com.github.io/kolumnin-com/">  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
@@ -39,9 +38,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <a class="w3-logo w3-green w3-btn w3-left" href="https://kolumnin-com.github.io/kolumnin-com/">home</a>
 </section>
 </header>
-<section>
-This is the organisation index page
 </section>
+<H1>This is the organisation index page
+</H1>
 <section>
 <div class="w3-container w3-pale-blue">
 <div style="text-align:left">
@@ -180,7 +179,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2022- kolumnin.com All rights reserved.</div>
-<p>Last update: 09:39 2023 January 05</a>@kolumnin</p>
+<p>Last update: 09:58 2023 January 05</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
