--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 <section>
 <div class="w3-rest">
-    🙏😎If you Sponsor my open source activities, you will be recognised as my sponsor anywhere I go. 
-You will also get a sponsor badge🙏😄.
+    🙏😎 <b>Sponsor</b> 😂🙏
+<BR>
 <iframe src="https://github.com/sponsors/kolumnin/button" title="Sponsor kolumnin" height="35" width="116" style="border: 0;"></iframe>
 <div id="smart-button-container">
     <div style="text-align: center"><label for="description">Sponsor </label><input type="text" name="descriptionInput" id="description" maxlength="127" value=""></div>
@@ -180,7 +180,7 @@ You will also get a sponsor badge🙏😄.
 <HR>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2022- kolumnin.com All rights reserved.</div>
-<p>Last update: 10:02 2023 January 05</a>@kolumnin</p>
+<p>Last update: 11:12 2023 January 19</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
