--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-        <!-- Google Tag Manager -->
+       <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -62,6 +62,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p id="invoiceidError" style="visibility: hidden; color:red; text-align: center;">Please enter an Invoice ID</p>
     <div style="text-align: center; margin-top: 0.625rem;" id="paypal-button-container"></div>
   </div>
+<div>
   <script src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
   <script>
   function initPayPalButton() {
@@ -171,21 +172,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   }
   initPayPalButton();
   </script>
-<HR>
+</div>
+<div>
 <!--Google adsense-->
 <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-6716492374225592">
 </amp-auto-ads>
 <!--Google adsense-->
-<HR>
+</div>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2022- kolumnin.com All rights reserved.</div>
-<p>Last update: 11:12 2023 January 19</a>@kolumnin</p>
+<p>Last update: 11:21 2023 January 19</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
 </div>
-</div>
+<div>
 </div>
 </body>
 <script type="module">
