--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 <title>kolumnin-com_index.html</title>
 <meta http-equiv="refresh"
-        content="3; url = https://kolumnin-com.github.io/kolumnin-com/">  
+        content="3; url = https://kolumnin-com.github.io/kolumnin-com/index.html">  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="Author" content="Dr. Muraleedharan Koluthappallil">
@@ -28,7 +28,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MMBKJP4"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<section class="page-header w3-logo-image">
+<section class="w3-page-header w3-logo-image">
 <header>
 <div>
 <a class="anchor" href="https://kolumnin-com.github.io/kolumnin-com/">
@@ -43,8 +43,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <H1>This is the organisation index page
 </H1>
 <section>
-<div class="w3-container w3-pale-blue">
+<div class="w3-container w3-pale-green">
 <div style="text-align:left">
+<HR>
+<HR>
 <HR>
 </div></div>
 </section>
@@ -182,7 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2022- kolumnin.com All rights reserved.</div>
-<p>Last update: 11:21 2023 January 19</a>@kolumnin</p>
+<p>Last update: 13:26 2023 January 19</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
