--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section>
 <div class="w3-rest">
     🙏😎 <b>Sponsor</b> 😂🙏
-<BR>
-<iframe src="https://github.com/sponsors/kolumnin/button" title="Sponsor kolumnin" height="35" width="116" style="border: 0;"></iframe>
+<BR> 
+<iframe src="https://github.com/sponsors/kolumnin-com/card" title="Sponsor kolumnin-com" height="225" width="600" style="border: 0;"></iframe>       
+<!--iframe src="https://github.com/sponsors/kolumnin/button" title="Sponsor kolumnin" height="35" width="116" style="border: 0;"></iframe-->
 <div id="smart-button-container">
     <div style="text-align: center"><label for="description">Sponsor </label><input type="text" name="descriptionInput" id="description" maxlength="127" value=""></div>
       <p id="descriptionError" style="visibility: hidden; color:red; text-align: center;">Please enter a description</p>
@@ -184,7 +185,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
 <div>©2022- kolumnin.com All rights reserved.</div>
-<p>Last update: 16:18 2023 February 22</a>@kolumnin</p>
+<p>Last update: 08:36 2023 November 20</a>@kolumnin</p>
 </footer>
 </section>
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://GitHub.com/kolumnin"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
